# project-skeleton-python

./: .gitignore  LICENSE  README.md  requirements_test.txt  setup.cfg  tox.ini
company/tool/: cli.py
company/tool/shared/: thing.py
company_tool/: __init__.py  cli.py
test/: test_cli.py  test_shared_thing.py
