[metadata]
name = company_tool
author = Anony Mous
author-email = anon@domain.com
summary = Company Tool
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
;home-page = https://github.com/Ultimagen/Configurator
;project_urls =
;    Bug Tracker = https://github.com/Ultimagen/Configurator
;    Documentation = https://github.com/Ultimagen/Configurator
;    Source Code = https://github.com/Ultimagen/Configurator
license = Proprietary
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    company_tool

[files]
packages =
    company.tool
;data_files =
;    ultimagen/configurator/templates = etc/ultimagen/configurator/

[entry_points]
console_scripts =
    company_tool = company.tool.cli:main
